--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">InstagramPhotoCropper</string>
     <string name="action_settings">Settings</string>
+    <string name="preference_file_key">com.example.instagramphotocropper</string>
 </resources>
