--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">InstagramPhotoCropper</string>
+    <string name="app_name">PicTools</string>
     <string name="action_settings">Settings</string>
+    <string name="action_insta">Photo loader testing</string>
     <string name="preference_file_key">com.example.instagramphotocropper</string>
 </resources>
