--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,9 @@
     <string name="app_name">PicTools</string>
     <string name="action_settings">Settings</string>
     <string name="action_insta">Photo loader testing</string>
+    <string name="action_login">Login</string>
     <string name="preference_file_key">com.example.instagramphotocropper</string>
+
+    <string name="callback_url">https://josuegramajo.com/encriptacion</string>
+    <string name="base_url">https://api.instagram.com/</string>
 </resources>
